work on tracing and benchmarking